--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <html>
-    <head>
-        <title>Hunter's 441 Site</title>
-    </head>
-    <body>
-        <h1>Hunter's 441 Homework Site</h1>
+<head>
+    <title>About Me</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="About Me">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content= "Hunter Jarvis">
+    <link rel="stylesheet" href="./HW1/css/fonts.css" type="text/css" />
+    <link rel="stylesheet" href="./HW1/css/style.css" type="text/css" />
+</head>
+<body>
+    <h1>Hunter Jarvis</h1>
+    <p>Junior</p>       <p>Media Arts With a Concentration in Game Design and Interactive Media</p>        <p>2023</p>
+    
+    <section>
+        <hr>
+        <div class="div-align">
+            <h2>So Who I am</h2>
+            I'm a Junior at the University of Montana with the idea of getting into game design. I would like to be apart of the art creation side of game design over the coding side. I want to get into game design because I have always loved video games from an early age and I can thank my father for that. I think it's awesome that there is so much potential when creating a game. 
+        </div>
+        <div class="div-align">
+            <h2>Skills</h2>
+            I have some experience with Adobe Illustrator, Photoshop, Premiere Pro, and After Effects. I also have some coding experience.
+        </div>
+        <div class="div-align">
+            <h2>Other Interests</h2>
+            Some of my other hobbies include playing video games, ceramics, and wood working. I currently play Rocket League for the University of Montana on the JV team and have been enjoying it a lot. I'm currently in a ceramics class making pots on the wheel and am loving every minute of it. Wood working is something I would like to get into more in my free time. I think it's similar to ceramics in the way that I am using my hands to create something and it gives the impression of human touch and not factory.
+        </div>
+    </section>
+    <br />
 
-        <p>This is the main homepage for Hunter Jarvis' example homework site for mart441. 
-        This website is where all live examples will be located throughout the semester.</p>
-    </body>
+</body>
+
 </html>
